--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,48 @@
-hero {
-width: 1734.66650390625;
-height: 918.6309204101562;
-top: -134.46px;
-left: -379px;
-border: 0.9px solid #212832;
+.hero {
+     font-family: Verdana, Tahoma, sans-serif;
 }
 h5.text-color {
-    color: #ff7f50;
+    color: tomato;
  text-transform: uppercase;
+ font-size: 18px;
+font-weight: 900;
 }
 h5.margin-top {
-    margin-top: 80px;
+    margin-top: 90px;
+}
+.hero {
+    padding: 10px 70px;
+}
+.hero-heading {
+    width: 50%;
+color: rgb(11, 13, 34);
+text-shadow: 1px 2px rgb(32, 32, 109);
+    font-size: 60px;
+line-height: 1em;
+}
+.find-more {
+    text-decoration: none;
+    padding: 16px 20px;
+    color: #fff;
+    background-color: orange;
+    font-size: 1.1em;
+    border: none;
+    border-radius: 10px;
+    margin-right: 33px;
+}
+.demo-btn {
+    text-decoration: none;
+    padding: 16px 20px;
+    font-size: 1.1em;
+    color: rgba(0, 0, 0, 0.6);
+    border: none;
+}
+img {
+    margin-bottom: -17px;
+    margin-right: 15px;
+    width: 50px;
+    height: 50px;
+}
+.btn-section {
+    margin-top: 35px;
 }
