--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,11 @@ img {
 .btn-section {
     margin-top: 35px;
 }
+@media (min-width:920px) {
+.hero {
+   background-image: url(../images/hero-image.jpeg);
+     background-position: top right;
+     background-repeat: no-repeat;
+     background-size: 45% 100%;
+}
+}
