--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,16 @@
     box-sizing: border-box;
     
 }
-.forma{
+/* .forma{
     margin:40px;
 }
 .jadoo{
-    font-size:xx-large;
+    font-size:xx-large; wrong 
+    font-size: 25px;
     text-align: center;
     font-weight:bold;
-    font-family:timesnew roman;
+    font-family:timesnew roman; wrong 
+    font-family: sans-serif;
 }
 .button{
     background-color:transparent;
@@ -19,4 +21,45 @@
 a{
     color:black;
     text-decoration:none;
+} */
+
+
+/* correct  */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #fff;
+}
+
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+}
+
+.button {
+  padding: 8px 16px;
+  background-color: transparent;
+  border:1px solid #333;
+ 
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
 }
