--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
      font-family: Verdana, Tahoma, sans-serif;
 }
 h5.text-color {
-    color: tomato;
+    color: #df6951;
  text-transform: uppercase;
  font-size: 18px;
 font-weight: 900;
@@ -15,8 +15,7 @@ h5.margin-top {
 }
 .hero-heading {
     width: 50%;
-color: rgb(11, 13, 34);
-text-shadow: 1px 2px rgb(32, 32, 109);
+color: #181e48;
     font-size: 60px;
 line-height: 1em;
 }
@@ -24,7 +23,7 @@ line-height: 1em;
     text-decoration: none;
     padding: 16px 20px;
     color: #fff;
-    background-color: orange;
+    background-color: #F1A501;
     font-size: 1.1em;
     border: none;
     border-radius: 10px;
@@ -34,7 +33,7 @@ line-height: 1em;
     text-decoration: none;
     padding: 16px 20px;
     font-size: 1.1em;
-    color: rgba(0, 0, 0, 0.6);
+    color: #686D77;
     border: none;
 }
 img {
@@ -46,11 +45,15 @@ img {
 .btn-section {
     margin-top: 35px;
 }
+p.hero-text {
+    color: #5e6282;
+}
 @media (min-width:912px) {
 .hero {
-   background-image: url(../images/Traveller\ 1.png), url(../images/Group.png), url(../images/Group.png);
-     background-position: 80% 50px, 60% 100px,  88% 130px;
-     background-repeat: no-repeat, no-repeat, no-repeat;
-     background-size: 40% 95%, 100px 80px, 100px 80px;
+   background-image: url('../images/Traveller\ 1.png'), url('../images/Group.png'),
+   url('../images/Group.png'), url('../images/Decore.svg');
+     background-position: 80% 50px, 60% 100px,  88% 130px, 50% 0px;
+     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+     background-size: 40% 95%, 100px 80px, 100px 80px, 50% 100%;
 }
 }
