--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,114 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+  *{
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+.main-destination-container {
+    width: 100%;
 }
-/* .forma{
-    margin:40px;
+.inner-destinaton {
+    width: 90%;
+    font-family: "Poppins", sans-serif;
+    margin: 0 auto;
+    background-color: #fcfcfc;
 }
-.jadoo{
-    font-size:xx-large; wrong 
-    font-size: 25px;
+.heading-main {
     text-align: center;
-    font-weight:bold;
-    font-family:timesnew roman; wrong 
-    font-family: sans-serif;
-}
-.button{
-    background-color:transparent;
-}
-a{
-    color:black;
-    text-decoration:none;
-} */
+    margin-bottom: 40px;
+    width: 100%;
 
-
-/* correct  */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  background-color: #fff;
 }
-
-.logo {
-  font-size: 24px;
-  font-weight: bold;
-  color: #333;
+.heading-main h6 {
+    font-size: 16.24px;
+  color: #5E6282;
+  margin-bottom: 5px;
+  font-weight: 600;
+  letter-spacing: 0%;
+  line-height: 100%;
 }
-
-.nav-links {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-  align-items: center;
-  margin: 0;
-  padding: 0;
+.heading-main h2 {
+    font-size: 45.12px;
+  color: #14183E;
+  margin: 15px 0;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 0%;
 }
+.all-box003 {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin: 0 auto;
+    position: relative;
+}
+.decore{
+    position: absolute;
+  z-index: 1;
+  top: 200px;
+  right: -20px;
+}
+.box{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ddd;
+    background: #ffffff;
+    z-index: 2;
+    border-radius: 21.66px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.image005 {
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
+}
+.image005 img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+.data223 {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
 
-.nav-links a {
-  text-decoration: none;
-  color: #333;
+}
+.price_name {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.svg_days {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.svg_days img {
+    width: 18.047758102416992;
+    height: 18.047758102416992px;
+    margin-right: 5px;
+}
+.location{
+    font-size: 16.24px;
   font-weight: 500;
+  line-height: 125%;
+  letter-spacing: 0%;
+  color: #5E6282;
 }
-
-.button {
-  padding: 8px 16px;
-  background-color: transparent;
-  border:1px solid #333;
- 
-  font-weight: bold;
-  border-radius: 5px;
-  cursor: pointer;
+.price11 {
+    font-size: 16.24px;
+  font-weight: 500;
+  line-height: 125%;
+  letter-spacing: 0%;
+  color: #5E6282;
+}
+.time22 {
+    font-size: 14.44px;
+  font-weight: 500;
+  line-height: 125%;
+  letter-spacing: 0%;
+  color: #5E6282;
 }
